Form: Fix label and legend vertical-align

--- a/css/pico.css
+++ b/css/pico.css
@@ -1208,7 +1208,6 @@ label,
 fieldset legend {
   display: block;
   margin-bottom: calc(var(--spacing) * 0.25);
-  vertical-align: middle;
 }
 
 input:not([type=checkbox]):not([type=radio]),
