--- a/css/pico.fluid.classless.css
+++ b/css/pico.fluid.classless.css
@@ -1001,7 +1001,6 @@ label,
 fieldset legend {
   display: block;
   margin-bottom: calc(var(--spacing) * 0.25);
-  vertical-align: middle;
 }
 
 input:not([type=checkbox]):not([type=radio]),
