--- a/scss/content/_form.scss
+++ b/scss/content/_form.scss
@@ -132,7 +132,6 @@ label,
 fieldset legend {
   display: block;
   margin-bottom: calc(var(--spacing) * 0.25);
-  vertical-align: middle;
 }
 
 // Blocks, 100%
